<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    tools:context=".activity.ProductActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/product_price"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_view" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/product_id"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_update" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete" />
</LinearLayout>