<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    tools:context=".activity.CustomersActivity">

    <EditText
        android:id="@+id/etCName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/customer_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etCDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/customer_details"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnCSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/btnCView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_view" />

    <EditText
        android:id="@+id/etCid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/customer_id"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnCUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_update" />

    <Button
        android:id="@+id/btnCDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete" />
</LinearLayout>